tests/macros/plugin/transform.stderr
error: option `transform` does not exist for kind `plugin`
 --> $DIR/transform.rs:2:44
  |
2 |     let q = discourse::questions![Plugin { transform: todo!() }];
  |                                            ^^^^^^^^^
