tests/macros/plugin/transform.rs
fn main() {
    let q = discourse::questions![Plugin { transform: todo!() }];
}
